objects/ssot__PartyPhilanthropicOccurrence__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountId__c</fullName>
        <label>Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AttributedUserId__c</fullName>
        <label>Attributed User</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CollectedDate__c</fullName>
        <label>Collected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ContactId__c</fullName>
        <label>Contact</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EstimatedValueAmount__c</fullName>
        <label>Estimated Value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Party Philanthropic Occurrence Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OccurrenceType__c</fullName>
        <label>Occurrence Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OtherSourceName__c</fullName>
        <label>Other Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParticipantId__c</fullName>
        <label>Participant</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartyPhilanthropicAssessmentId__c</fullName>
        <label>Party Philanthropic Assessment</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedOrganizationId__c</fullName>
        <label>Related Organization</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ResearchType__c</fullName>
        <label>Research Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceId__c</fullName>
        <label>Source</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceObject__c</fullName>
        <label>Source Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceType__c</fullName>
        <label>Source Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SummaryText__c</fullName>
        <label>Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VerificationType__c</fullName>
        <label>Verification Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731658745479_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PartyPhilanthropicOccurrence_Related_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>PartyPhilanthropicOccurrence_Related_rel</relationshipLabel>
        <relationshipName>rel_1731658745479_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731658763717_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PartyPhilanthropicOccurrence_SourceI_rel</label>
        <referenceTo>ssot__ConvChannelEngagementSummary__dlm</referenceTo>
        <relationshipLabel>PartyPhilanthropicOccurrence_SourceI_rel</relationshipLabel>
        <relationshipName>rel_1731658763717_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731658764058_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PartyPhilanthropicOccurrence_Account_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>PartyPhilanthropicOccurrence_Account_rel</relationshipLabel>
        <relationshipName>rel_1731658764058_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>